# Proyecto-Narvaez

./: Algoritmo.c  Algoritmo.h  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Implementacion_algoritmo.c  MAINTAINERS.md  README.md  SECURITY.md  main.c
src/: commonfunctions.py  main.ipynb  main.py  train.py
temp/: Temporal_Operations.c
