cmake_minimum_required(VERSION 4.1)
project(Proyecto_Narvaez C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(Proyecto_Narvaez main.c
        Algoritmo.c
        Algoritmo.h
        Implementacion_algoritmo.c
        main.c
        main.c
        main.c
        main.c
        main.c)
